--- a/portfolio-2025/css/project.css
+++ b/portfolio-2025/css/project.css
@@ -185,9 +185,13 @@
     display: flex;
   }
     .slide-content {
-        text-align: center;
-        padding-left: 0;
-    }
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center; /* Center the image */
+    justify-content: center;
+}
 
     .slide-content h2 {
         font-size: 2.5rem;
