--- a/portfolio-2025/css/about.css
+++ b/portfolio-2025/css/about.css
@@ -173,6 +173,12 @@ h1 {
 .explore-images {
   display: flex;
   gap: 10px;
+  width: 100%;
+  max-width: 500px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 
 .explore-images img {
@@ -243,6 +249,9 @@ h1 {
   max-width: 400px;
   font-size: 16px;
   color: #333;
+  font-family: "HarmoniaSansMonoRegular", sans-serif;
+  font-weight: 200;
+  line-height: 1.6;
 }
 
 .contact-right {
@@ -252,6 +261,9 @@ h1 {
 .contact-right p {
   font-size: 16px;
   margin: 5px 0;
+  font-family: "HarmoniaSansMonoRegular", sans-serif;
+  font-weight: 200;
+  line-height: 1.6;
 }
 
 .contact-right strong {
