--- a/portfolio-2025/css/style.css
+++ b/portfolio-2025/css/style.css
@@ -318,9 +318,9 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  gap: 80px;
+  gap: 40px;
   min-height: fit-content; /* Giữ chiều cao chỉ bằng nội dung */
-  height: 80vh;
+  height: 100vh;
 }
 
 .header-portfolio {
@@ -369,6 +369,25 @@ body {
   width: 100%; /* Line chiếm toàn bộ không gian của div chứa nó */
   border: none;
   border-top: 1px solid #c9c9c9;
+}
+.container-wrap {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  height: auto;
+}
+.sub-title-projet {
+  display: flex;
+  font-size: 18px;
+  color: #383838;
+  max-width: 750px;
+  line-height: 1.6;
+  font-family: "HarmoniaSansMonoRegular", sans-serif;
+  padding-bottom: 40px;
+
 }
 
 .portfolio-grid {
@@ -493,7 +512,7 @@ body {
 /* Small Text */
 .small-text {
   display: flex;
-  font-size: 16px;
+  font-size: 18px;
   color: #383838;
   max-width: 400px;
   line-height: 1.6;
@@ -590,7 +609,7 @@ body {
   flex: 1;
   max-width: 600px;
   align-self: flex-end; /* Force le texte à être aligné en bas */
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 200;
   color: #383838;
   line-height: 1.6;
@@ -980,7 +999,7 @@ p a:hover {
   }
 
   .small-text {
-    font-size: 14px;
+    font-size: 18px;
     max-width: 90%;
     text-align: center;
   }
